Add option to copy screenshot to clipboard in background mode

Summary:
FEATURE: 385559
BUG: 393708
FIXED-IN: 19.04.0

Reviewers: #spectacle, ngraham

Reviewed By: #spectacle, ngraham

Subscribers: ngraham, davidre, #spectacle

Tags: #spectacle

Differential Revision: https://phabricator.kde.org/D19715